fix(avo-2219): add spacing between title and bookmark button

--- a/src/item/components/ItemVideoDescription.scss
+++ b/src/item/components/ItemVideoDescription.scss
@@ -17,7 +17,7 @@
 	.c-toolbar__left {
 		flex-grow: 1;
 		max-width: 100%;
-		padding-left: 0.8rem;
+		padding-right: 0.8rem;
 	}
 
 	.c-toolbar__right {
